[tool.poetry]
name = "nlp-using-llms"
version = "0.1.0"
description = ""
authors = ["sameervk <sameervk.iitkgp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
torch = "^2.5.0"
lightning = "^2.4.0"
scikit-learn = "^1.5.2"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
